# serializer version: 1
# name: test_sensor_entities[sensor.test_ghost_arr-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_ghost_arr',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'ARR',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.MONETARY: 'monetary'>,
    'original_icon': None,
    'original_name': 'ARR',
    'platform': 'ghost',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'arr',
    'unique_id': 'a1b2c3d4-e5f6-7890-abcd-ef1234567890_arr',
    'unit_of_measurement': 'USD',
  })
# ---
# name: test_sensor_entities[sensor.test_ghost_arr-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'monetary',
      'friendly_name': 'Test Ghost ARR',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': 'USD',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_ghost_arr',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '60000',
  })
# ---
# name: test_sensor_entities[sensor.test_ghost_comped_members-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_ghost_comped_members',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Comped members',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Comped members',
    'platform': 'ghost',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'comped_members',
    'unique_id': 'a1b2c3d4-e5f6-7890-abcd-ef1234567890_comped_members',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_entities[sensor.test_ghost_comped_members-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Ghost Comped members',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_ghost_comped_members',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '50',
  })
# ---
# name: test_sensor_entities[sensor.test_ghost_draft_posts-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_ghost_draft_posts',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Draft posts',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Draft posts',
    'platform': 'ghost',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'draft_posts',
    'unique_id': 'a1b2c3d4-e5f6-7890-abcd-ef1234567890_draft_posts',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_entities[sensor.test_ghost_draft_posts-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Ghost Draft posts',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_ghost_draft_posts',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '5',
  })
# ---
# name: test_sensor_entities[sensor.test_ghost_free_members-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_ghost_free_members',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Free members',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Free members',
    'platform': 'ghost',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'free_members',
    'unique_id': 'a1b2c3d4-e5f6-7890-abcd-ef1234567890_free_members',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_entities[sensor.test_ghost_free_members-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Ghost Free members',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_ghost_free_members',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '850',
  })
# ---
# name: test_sensor_entities[sensor.test_ghost_latest_email-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_ghost_latest_email',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Latest email',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Latest email',
    'platform': 'ghost',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'latest_email',
    'unique_id': 'a1b2c3d4-e5f6-7890-abcd-ef1234567890_latest_email',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_entities[sensor.test_ghost_latest_email-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Ghost Latest email',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_ghost_latest_email',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Newsletter #1',
  })
# ---
# name: test_sensor_entities[sensor.test_ghost_latest_email_click_rate-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_ghost_latest_email_click_rate',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Latest email click rate',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Latest email click rate',
    'platform': 'ghost',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'latest_email_click_rate',
    'unique_id': 'a1b2c3d4-e5f6-7890-abcd-ef1234567890_latest_email_click_rate',
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensor_entities[sensor.test_ghost_latest_email_click_rate-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Ghost Latest email click rate',
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_ghost_latest_email_click_rate',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '10',
  })
# ---
# name: test_sensor_entities[sensor.test_ghost_latest_email_clicked-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_ghost_latest_email_clicked',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Latest email clicked',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Latest email clicked',
    'platform': 'ghost',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'latest_email_clicked',
    'unique_id': 'a1b2c3d4-e5f6-7890-abcd-ef1234567890_latest_email_clicked',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_entities[sensor.test_ghost_latest_email_clicked-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Ghost Latest email clicked',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_ghost_latest_email_clicked',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '50',
  })
# ---
# name: test_sensor_entities[sensor.test_ghost_latest_email_open_rate-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_ghost_latest_email_open_rate',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Latest email open rate',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Latest email open rate',
    'platform': 'ghost',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'latest_email_open_rate',
    'unique_id': 'a1b2c3d4-e5f6-7890-abcd-ef1234567890_latest_email_open_rate',
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensor_entities[sensor.test_ghost_latest_email_open_rate-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Ghost Latest email open rate',
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_ghost_latest_email_open_rate',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '40',
  })
# ---
# name: test_sensor_entities[sensor.test_ghost_latest_email_opened-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_ghost_latest_email_opened',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Latest email opened',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Latest email opened',
    'platform': 'ghost',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'latest_email_opened',
    'unique_id': 'a1b2c3d4-e5f6-7890-abcd-ef1234567890_latest_email_opened',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_entities[sensor.test_ghost_latest_email_opened-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Ghost Latest email opened',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_ghost_latest_email_opened',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '200',
  })
# ---
# name: test_sensor_entities[sensor.test_ghost_latest_email_sent-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_ghost_latest_email_sent',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Latest email sent',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Latest email sent',
    'platform': 'ghost',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'latest_email_sent',
    'unique_id': 'a1b2c3d4-e5f6-7890-abcd-ef1234567890_latest_email_sent',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_entities[sensor.test_ghost_latest_email_sent-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Ghost Latest email sent',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_ghost_latest_email_sent',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '500',
  })
# ---
# name: test_sensor_entities[sensor.test_ghost_latest_post-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_ghost_latest_post',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Latest post',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Latest post',
    'platform': 'ghost',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'latest_post',
    'unique_id': 'a1b2c3d4-e5f6-7890-abcd-ef1234567890_latest_post',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_entities[sensor.test_ghost_latest_post-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Ghost Latest post',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_ghost_latest_post',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Latest Post',
  })
# ---
# name: test_sensor_entities[sensor.test_ghost_mrr-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_ghost_mrr',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'MRR',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.MONETARY: 'monetary'>,
    'original_icon': None,
    'original_name': 'MRR',
    'platform': 'ghost',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'mrr',
    'unique_id': 'a1b2c3d4-e5f6-7890-abcd-ef1234567890_mrr',
    'unit_of_measurement': 'USD',
  })
# ---
# name: test_sensor_entities[sensor.test_ghost_mrr-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'monetary',
      'friendly_name': 'Test Ghost MRR',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': 'USD',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_ghost_mrr',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '5000',
  })
# ---
# name: test_sensor_entities[sensor.test_ghost_paid_members-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_ghost_paid_members',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Paid members',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Paid members',
    'platform': 'ghost',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'paid_members',
    'unique_id': 'a1b2c3d4-e5f6-7890-abcd-ef1234567890_paid_members',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_entities[sensor.test_ghost_paid_members-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Ghost Paid members',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_ghost_paid_members',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '100',
  })
# ---
# name: test_sensor_entities[sensor.test_ghost_published_posts-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_ghost_published_posts',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Published posts',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Published posts',
    'platform': 'ghost',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'published_posts',
    'unique_id': 'a1b2c3d4-e5f6-7890-abcd-ef1234567890_published_posts',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_entities[sensor.test_ghost_published_posts-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Ghost Published posts',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_ghost_published_posts',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '42',
  })
# ---
# name: test_sensor_entities[sensor.test_ghost_scheduled_posts-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_ghost_scheduled_posts',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Scheduled posts',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Scheduled posts',
    'platform': 'ghost',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'scheduled_posts',
    'unique_id': 'a1b2c3d4-e5f6-7890-abcd-ef1234567890_scheduled_posts',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_entities[sensor.test_ghost_scheduled_posts-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Ghost Scheduled posts',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_ghost_scheduled_posts',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2',
  })
# ---
# name: test_sensor_entities[sensor.test_ghost_socialweb_followers-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_ghost_socialweb_followers',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'SocialWeb followers',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'SocialWeb followers',
    'platform': 'ghost',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'socialweb_followers',
    'unique_id': 'a1b2c3d4-e5f6-7890-abcd-ef1234567890_socialweb_followers',
    'unit_of_measurement': 'followers',
  })
# ---
# name: test_sensor_entities[sensor.test_ghost_socialweb_followers-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Ghost SocialWeb followers',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': 'followers',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_ghost_socialweb_followers',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '150',
  })
# ---
# name: test_sensor_entities[sensor.test_ghost_socialweb_following-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_ghost_socialweb_following',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'SocialWeb following',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'SocialWeb following',
    'platform': 'ghost',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'socialweb_following',
    'unique_id': 'a1b2c3d4-e5f6-7890-abcd-ef1234567890_socialweb_following',
    'unit_of_measurement': 'accounts',
  })
# ---
# name: test_sensor_entities[sensor.test_ghost_socialweb_following-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Ghost SocialWeb following',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': 'accounts',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_ghost_socialweb_following',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '25',
  })
# ---
# name: test_sensor_entities[sensor.test_ghost_total_comments-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_ghost_total_comments',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Total comments',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Total comments',
    'platform': 'ghost',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'total_comments',
    'unique_id': 'a1b2c3d4-e5f6-7890-abcd-ef1234567890_total_comments',
    'unit_of_measurement': 'comments',
  })
# ---
# name: test_sensor_entities[sensor.test_ghost_total_comments-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Ghost Total comments',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': 'comments',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_ghost_total_comments',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '156',
  })
# ---
# name: test_sensor_entities[sensor.test_ghost_total_members-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_ghost_total_members',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Total members',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Total members',
    'platform': 'ghost',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'total_members',
    'unique_id': 'a1b2c3d4-e5f6-7890-abcd-ef1234567890_total_members',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_entities[sensor.test_ghost_total_members-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Ghost Total members',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_ghost_total_members',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1000',
  })
# ---
# name: test_sensor_entities[sensor.test_ghost_weekly_subscribers-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_ghost_weekly_subscribers',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Weekly subscribers',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Weekly subscribers',
    'platform': 'ghost',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'newsletter_subscribers',
    'unique_id': 'a1b2c3d4-e5f6-7890-abcd-ef1234567890_newsletter_nl1',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_entities[sensor.test_ghost_weekly_subscribers-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Ghost Weekly subscribers',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_ghost_weekly_subscribers',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '800',
  })
# ---
